--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,10 @@
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/Makefile.am (HTML_IMAGES): Add stock_select_all_24.png
+	
+	* gtk/gtk-sections.txt: 
+	* gtk/tmpl/gtkstock.sgml: Add GTK_STOCK_SELECT_ALL. 
+
 	* gtk/gtk.types: Add gtk_status_icon_get_type
 
 	* gtk/gtk-docs.sgml: Add GtkStatusIcon
