--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkstatusicon-x11.c (gtk_status_icon_new_from_stock): 
+	* gtk/gtkimage.c (gtk_image_new_from_stock): Don't
+	refer to nonexisting stock ids.
+
 	* gtk/gtktextview.c (popup_targets_received): 
 	* gtk/gtkentry.c (popup_targets_received): Construct
 	the "Select All" menuitem from stock.
