--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,7 @@
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/tmpl/gtkstatusicon.sgml: Add a long description.
+
 	* gtk/Makefile.am (HTML_IMAGES): Add stock_select_all_24.png
 	
 	* gtk/gtk-sections.txt: 
