--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-30  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtk-sections.txt: Add gtk_window_[sg]et_deletable.
+
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/tmpl/gtkstatusicon.sgml: Add a long description.
