--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -2,6 +2,7 @@
 
 	* gtk/gtk-sections.txt: Add gtk_window_[sg]et_deletable.
 	Add gtk_selection_data_targets_include_uri.
+	Add gtk_targets_include... functions.
 
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
