--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-08-30  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkentry.c (gtk_entry_draw_frame): Fix some unused
+	code.  (#313946, Christian Persch)
+
 	* gtk/gtkuimanager.c (gtk_ui_manager_class_init): Another
 	fix for the default value of the "ui" property.
 
