--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-31  Baris Cicek <baris@teamforce.name.tr>
+
+	* ku.po: Added Kurdish Translation from Erdal Ronahi
+
 2005-08-28  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
