--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-31  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktextiter.c (gtk_text_iter_backward_visible_cursor_positions): 
+	Fix a typo in the docs.  (#314878, Guillaume Cottenceau)
+
 2005-08-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkentry.c (gtk_entry_class_init): Add key bindings to
