--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-31  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2005-08-31  Baris Cicek <baris@teamforce.name.tr>
 
 	* ku.po: Added Kurdish Translation from Erdal Ronahi
