Updated Russian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-31  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2005-08-31  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
