--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-31  Baris Cicek <baris@teamforce.name.tr>
+
+	* ku.po: Added Kurkish Translation from Erdal Ronahi
+
 2005-08-31  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
