--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-31  Baris Cicek <baris@teamforce.name.tr>
+
+	* configure.in: Added ku to ALL_LINGUAS
+
 2005-08-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
