Update Russian translation

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-01  Leonid kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2005-08-31  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
