--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,11 @@
+2005-09-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* xdgmime.h:
+	* xdgmime.c (xdg_mime_get_mime_type_for_file): Take
+	a struct statbuf * as argument.
+
+	* test-mime.c (main): Adjust.
+
 2005-08-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.8.2 ===
