--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-02  Jordi Mallach  <jordi@sindominio.net>
+
+	* ku.po: Added empty file to fix GTK+ build.
+
 2005-08-29  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
