--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktextview.c (gtk_text_view_key_press_event): Reset 
+	im context before committing \n or \t.
+
 2005-09-02  Alexander Larsson  <alexl@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c: (shortcuts_add_volumes),
