--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkmain.c (gtk_get_event_widget): If the window is destroyed,
+	we still need to deliver the destroy event.  (#314980, Chris Lahey)
+
 2005-09-02  Alexander Larsson  <alexl@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c: (shortcuts_add_volumes),
