--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-09-02  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkentry.c (gtk_entry_destroy): Disconnect idle handlers
+	on destroy to avoid problems when they are called on a destroyed
+	widget.  (#315135, John Cupitt)
+
 	* gtk/gtkmain.c (gtk_get_event_widget): If the window is destroyed,
 	we still need to deliver the destroy event.  (#314980, Chris Lahey)
 
