--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-03  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
+
+	* zh_TW.po: Updated Traditional Chinese translation.
+
 2005-09-02  Jordi Mallach  <jordi@sindominio.net>
 
 	* ku.po: Added empty file to fix GTK+ build.
