Updated Serbian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-03  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2005-08-31  Baris Cicek <baris@teamforce.name.tr>
 
 	* ku.po: Added Kurkish Translation from Erdal Ronahi
