--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-03  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated.
+
 2005-09-03  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* zh_TW.po: Updated Traditional Chinese translation.
