--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-tga.c (parse_rle_data): Remove unused variable
+	pbuf_count.  (#315282, Kjartan Maraas)
+
 2005-08-31  Matthias Clasen  <mclasen@redhat.com>
 
 	* Makefile.am (gdk-pixbuf-enum-types.c): Intern type
