--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-05  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2005-09-05  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
