Updated Bulgarian translation by Alexander Shopov <ash@contact.bg>
2005-09-06  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Alexander Shopov <ash@contact.bg>

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-06  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Alexander Shopov <ash@contact.bg>
+
 2005-09-05  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
