--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkimcontextsimple.c (gtk_im_context_simple_filter_keypress): 
+	Make C-u commit and restart hex input if we are already in a
+	hex sequence.
+
 2005-09-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/x11/gdkkeys-x11.c (update_modmap): Make the modmap reflexive.
