--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-07  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2005-09-06  Matthias Clasen  <mclasen@redhat.com>
 
         * Makefile.in.in: Tell xgettext about all the
