--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-09  Clytie Siddall <clytie@riverland.net.au>
+
+        * vi.po: Updated Vietnamese translation.
+
 2005-09-06  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
