--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-09-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfontsel.c (gtk_font_selection_set_font_name): Handle 
+	invalid fontnames better. (#136926, Michael R. Walton)
+	
 	Stop cursor blinking in non-editable regions of a text view.
 	(#311508, Torbjörn Andersson)
 	
